fixed the scrollbar empty space issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -637,7 +637,7 @@ body {
   }
 
   .remaining {
-    border-top: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
     width: calc(100% - 72px);
   }
   .rightSlider__userInfo__image__padding {
@@ -1160,7 +1160,7 @@ body {
   }
   .remaining {
     width: calc(100% - 72px);
-    border-top: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
   }
   .rightSlider__userInfo__image__padding {
     padding-left: 13px;
